New version: SimulatedNeuralMoments v1.0.0
UUID: 43b7c8c0-5622-45b8-90a3-338fc50d2232
Repo: https://github.com/mcreel/SimulatedNeuralMoments.jl.git
Tree: 48c8dd5eec4cc47e205e1340fcdc7a96239e6766

Registrator tree SHA: 8e1a5ac2695627143951512d700c7e3c445102ec

--- a/S/SimulatedNeuralMoments/Versions.toml
+++ b/S/SimulatedNeuralMoments/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "677af49603a15b7eb7f65093d9db85a155f92743"
 
 ["0.3.0"]
 git-tree-sha1 = "6954928ad401413029928b9d87089ce26e789dea"
+
+["1.0.0"]
+git-tree-sha1 = "48c8dd5eec4cc47e205e1340fcdc7a96239e6766"
