--- a/S/SimulatedNeuralMoments/Compat.toml
+++ b/S/SimulatedNeuralMoments/Compat.toml
@@ -22,8 +22,13 @@ StatsBase = "0.33"
 StatsPlots = "0.14"
 
 ["0.2.1-0"]
-Flux = "0.12"
 PrettyTables = "0.10"
 
-["0.2.2-0"]
+["0.2.1-1"]
+Flux = "0.12"
+
+["0.2.2-1"]
 julia = "1.5-1.8"
+
+[1]
+PrettyTables = "1"
